# pokemonNotificationSystem

./: Cargo.toml  README.md
frontEnd/my-landing-page/: package-lock.json
frontEnd/my-landing-page/src/: App.js  index.css
src/: main.rs
