[package]
name = "pokemonNotifications"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.7", features = ["cookies"] }  # Enable cookies feature
scraper = "0.20.0"  # Add scraper
lettre = { version = "0.11.1", features = ["smtp-transport", "builder"] }
log = "0.4.22"
env_logger = "0.11.5"
mac_address = "1.1.8"  # Add mac_address
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
cookie = "0.16.2"